--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,10 @@ body, html {
     font-size: 2.5em; /* Increase countdown text size */
     margin-bottom: 20px;
     z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .countdown-timer.small {
@@ -105,8 +109,8 @@ body, html {
 }
 
 .landing-buttons {
-    position: relative; /* Adjust position for spacing */
-    top: 10px; /* Adjust spacing to reduce distance from countdown */
+    position: absolute;
+    bottom: 10%;
     display: flex;
     justify-content: space-around;
     width: 100%;
