--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,6 @@ body, html {
     font-size: 2.5em; /* Increase countdown text size */
     margin-bottom: 20px;
     z-index: 1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .countdown-timer.small {
@@ -109,8 +105,8 @@ body, html {
 }
 
 .landing-buttons {
-    position: absolute;
-    bottom: 10%;
+    position: relative; /* Adjust position for spacing */
+    top: 10px; /* Adjust spacing to reduce distance from countdown */
     display: flex;
     justify-content: space-around;
     width: 100%;
